set default values in input box

--- a/fraud_detection/flask_app/templates/index.html
+++ b/fraud_detection/flask_app/templates/index.html
@@ -10,10 +10,10 @@
   <body>
     <h2>Enter the following customer information</h2>
     <form id="input" method="post" action="predict">
-      purchase value: <input type="number" step="0.01" name="purchase_value"/> </br>
-      age: <input type="number" name="age"/> </br>
-      sign up time: <input type="text" name="signup_time"/> </br>
-      purchase time: <input type="text" name="purchase_time"/> </br>
+      purchase value: <input type="number" step="0.01" value="10.0" name="purchase_value"/> </br>
+      age: <input type="number" value="20" name="age"/> </br>
+      sign up time: <input type="text" value="2020-01-01 00:00:00" name="signup_time"/> </br>
+      purchase time: <input type="text" value= "2020-01-01 01:00:00" name="purchase_time"/> </br>
       sex: </br>
       <input type="radio" name="sex" value="M">Male</br>
       <input type="radio" name="sex" value="F">Female</br>
